unpackaged/main/default/objects/ApplicationBankAccount__c/ApplicationBankAccount__c.object-meta.xml
<CustomObject>
    <label>Application Bank Account</label>
    <nameField>
        <label>Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>