unpackaged/main/default/objects/ApplicationBankAccount__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>