unpackaged/main/default/objects/ApplicationBankAccount__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>