unpackaged/main/default/objects/ApplicationBankAccount__c/fields/BankAccountID__c.field-meta.xml
<CustomField>
    <fullName>BankAccountID__c</fullName>
    <description>links to python</description>
    <inlineHelpText>links to python</inlineHelpText>
    <label>Bank Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>