unpackaged/main/default/objects/ApplicationBankAccount__c/fields/IncludedbyCustomer__c.field-meta.xml
<CustomField>
    <fullName>IncludedbyCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included by Customer</label>
    <type>Checkbox</type>
</CustomField>