unpackaged/main/default/objects/ApplicationBankAccount__c/fields/IncludedbyStaff__c.field-meta.xml
<CustomField>
    <fullName>IncludedbyStaff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Included by Staff</label>
    <type>Checkbox</type>
</CustomField>