unpackaged/main/default/objects/ApplicationBankAccount__c/fields/InstitutionName__c.field-meta.xml
<CustomField>
    <fullName>InstitutionName__c</fullName>
    <label>Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>