unpackaged/main/default/objects/ApplicationBankAccount__c/fields/LastScrape__c.field-meta.xml
<CustomField>
    <fullName>LastScrape__c</fullName>
    <label>Last Scrape</label>
    <type>DateTime</type>
</CustomField>